# chemspyd

./: .flake8  ACKNOWLEDGMENTS.md  LICENSE  README.md  __init__.py  controller.py  controller_old.py  helpers.py  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini  utils.py  zones.json
.github/workflows/: linting_nox.yml  test.yml  testing_nox.yml  tests.yml
Legact Managers/: Manager.app  Manager_Balance.app  Manager_Balance_noMTP.app  Manager_injectionfix.app
chemspyd/: chemspeed_validators.py  controller.py  development_checklist
chemspyd/utils/: __init__.py  unit_conversions.py  zones.py
configuration/: element_config.json  status_keys.json  system_liquids.json
controller/: __init__.py  controller.py
controller/utils/: __init__.py  unit_conversions.py  zones.py
data/: Manager_DEV_220805.app  Manager_DEV_220810_no_MTP.app  Manager_dev.app
docs/: ChemsPyd.md
src/chemspyd/: __init__.py  controller.py  development_checklist  exceptions.py  executor.py  validate.py
src/chemspyd/defaults/: __init__.py  element_config.json  hardware_config.json
src/chemspyd/exceptions/: ChemspeedExceptions.py  __init__.py  zone_exceptions.py
src/chemspyd/routines/: __init__.py  routines.py
src/chemspyd/utils/: __init__.py  csv_handling.py  errors.py  hardware_config.json  logging_utils.py  unit_conversions.py  wait.py  zones.py
src/chemspyd/zones/: ChemspeedElement.py  Well.py  WellGroup.py  __init__.py  zone_utils.py
tests/: test_actions.py  test_remote.py  test_routines.py  test_unit_conversion.py  test_zones.py
