[metadata]
name = chemspyd
description = A Python API for the Chemspeed AutoSuite software.
author = Martin Seifrid
license = Apache 2.0
license_file = LICENSE
platforms = win, osx, unix, linux
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages =
    chemspyd
;install_requires =
python_requires = >=3.6
package_dir =
    =src

[options.extras_require]
testing =
    flake8>=4
    mypy>=0
    pytest>=7
    pytest-cov>=3
    tox>=3

[options.package_data]
chemspyd = py.typed

[flake8]
max-line-length = 160